# Template_OpenGL_glew_glfw

./: CMakeLists.txt  README.md
CMake/: FindGLEW.cmake  FindGLFW.cmake
Project/: main.cpp
Unused Test Files/: GLSL_Version.cpp  testTriangleShaders.cpp
